Fix spacing are large heading

--- a/assets/css/globals/_typography.scss
+++ b/assets/css/globals/_typography.scss
@@ -71,6 +71,7 @@
 	&:is(h1) {
 		font-size: var(--font-size-6-xl);
 		line-height: 1.2;
+		letter-spacing: var(--letter-spacing-tight);
 		margin-block-start: var(--space-heading-md);
 		margin-block-end: var(--space-heading-sm);
 	}
@@ -78,6 +79,7 @@
 	&:is(h2) {
 		font-size: var(--font-size-5-xl);
 		line-height: 1.3;
+		letter-spacing: var(--letter-spacing-tight);
 		margin-block-start: var(--space-heading-md);
 		margin-block-end: var(--space-heading-sm);
 	}
